// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree should render custom row when renderRow is provided 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="root scrollContainer uui-scroll-bars"
        data-overlayscrollbars="host"
        data-overlayscrollbars-initialize=""
      >
        <div
          class="os-size-observer"
        >
          <div
            class="os-size-observer-listener"
          />
        </div>
        <div
          class=""
          data-overlayscrollbars-padding=""
          style="margin-right: 0px; margin-bottom: 0px; margin-left: 0px; top: 0px; left: 0px; width: calc(100% + 0px);"
        >
          <div
            class="viewport"
            data-overlayscrollbars-contents=""
            data-overlayscrollbars-viewport="overflowXHidden overflowYHidden"
            style="padding: 0px 0px 0px 0px;"
            tabindex="-1"
          >
            <div
              class="listContainer"
              style="min-height: 1px;"
            >
              <div
                role="tree"
                style="margin-top: 0px;"
              >
                <div
                  data-testid="custom-item-1"
                >
                  Custom:
                   
                  Root
                </div>
              </div>
            </div>
            <div
              aria-busy="false"
              aria-label=""
              aria-live="polite"
              class="container uui-blocker-container root"
              role="status"
            />
          </div>
        </div>
        <div
          class="os-scrollbar os-scrollbar-horizontal os-theme-none uui-scroll-bars os-scrollbar-auto-hide os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
          style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
        >
          <div
            class="os-scrollbar-track"
          >
            <div
              class="os-scrollbar-handle"
            />
          </div>
        </div>
        <div
          class="os-scrollbar os-scrollbar-vertical os-theme-none uui-scroll-bars os-scrollbar-auto-hide os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
          style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
        >
          <div
            class="os-scrollbar-track"
          >
            <div
              class="os-scrollbar-handle"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="root scrollContainer uui-scroll-bars"
      data-overlayscrollbars="host"
      data-overlayscrollbars-initialize=""
    >
      <div
        class="os-size-observer"
      >
        <div
          class="os-size-observer-listener"
        />
      </div>
      <div
        class=""
        data-overlayscrollbars-padding=""
        style="margin-right: 0px; margin-bottom: 0px; margin-left: 0px; top: 0px; left: 0px; width: calc(100% + 0px);"
      >
        <div
          class="viewport"
          data-overlayscrollbars-contents=""
          data-overlayscrollbars-viewport="overflowXHidden overflowYHidden"
          style="padding: 0px 0px 0px 0px;"
          tabindex="-1"
        >
          <div
            class="listContainer"
            style="min-height: 1px;"
          >
            <div
              role="tree"
              style="margin-top: 0px;"
            >
              <div
                data-testid="custom-item-1"
              >
                Custom:
                 
                Root
              </div>
            </div>
          </div>
          <div
            aria-busy="false"
            aria-label=""
            aria-live="polite"
            class="container uui-blocker-container root"
            role="status"
          />
        </div>
      </div>
      <div
        class="os-scrollbar os-scrollbar-horizontal os-theme-none uui-scroll-bars os-scrollbar-auto-hide os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
        style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
      >
        <div
          class="os-scrollbar-track"
        >
          <div
            class="os-scrollbar-handle"
          />
        </div>
      </div>
      <div
        class="os-scrollbar os-scrollbar-vertical os-theme-none uui-scroll-bars os-scrollbar-auto-hide os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
        style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
      >
        <div
          class="os-scrollbar-track"
        >
          <div
            class="os-scrollbar-handle"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByAria": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByRoleAndText": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByAria": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByRoleAndText": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByAria": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByRoleAndText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByAria": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByRoleAndText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByAria": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByRoleAndText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByAria": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByRoleAndText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tree should render tree items with default VerticalTabButton 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="root scrollContainer uui-scroll-bars"
        data-overlayscrollbars="host"
        data-overlayscrollbars-initialize=""
      >
        <div
          class="os-size-observer"
        >
          <div
            class="os-size-observer-listener"
          />
        </div>
        <div
          class=""
          data-overlayscrollbars-padding=""
          style="margin-right: 0px; margin-bottom: 0px; margin-left: 0px; top: 0px; left: 0px; width: calc(100% + 0px);"
        >
          <div
            class="viewport"
            data-overlayscrollbars-contents=""
            data-overlayscrollbars-viewport="overflowXHidden overflowYHidden"
            style="padding: 0px 0px 0px 0px;"
            tabindex="-1"
          >
            <div
              class="listContainer"
              style="min-height: 1px;"
            >
              <div
                role="tree"
                style="margin-top: 0px;"
              >
                <button
                  class="uui-button-box uui-enabled -clickable root uui-vertical-tab-button uui-size-36 noLeftPadding onlyFoldable uui-no-left-icon uui-no-right-icon"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="foldingArea -clickable"
                    style="--uui-folding-indent: 0;"
                  >
                    <div
                      aria-label="Unfold"
                      class="container uui-icon uui-enabled uui-folding-arrow iconContainer"
                      role="button"
                    >
                      <svg
                        class="rotate-90ccw"
                        height="18"
                        width="18"
                      />
                    </div>
                  </div>
                  <div
                    class="captionWrapper"
                  >
                    <div
                      class="uui-caption uui-vertical-tab-button-weight-regular"
                    >
                      Root
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              aria-busy="false"
              aria-label=""
              aria-live="polite"
              class="container uui-blocker-container root"
              role="status"
            />
          </div>
        </div>
        <div
          class="os-scrollbar os-scrollbar-horizontal os-theme-none uui-scroll-bars os-scrollbar-auto-hide os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
          style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
        >
          <div
            class="os-scrollbar-track"
          >
            <div
              class="os-scrollbar-handle"
            />
          </div>
        </div>
        <div
          class="os-scrollbar os-scrollbar-vertical os-theme-none uui-scroll-bars os-scrollbar-auto-hide os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
          style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
        >
          <div
            class="os-scrollbar-track"
          >
            <div
              class="os-scrollbar-handle"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="root scrollContainer uui-scroll-bars"
      data-overlayscrollbars="host"
      data-overlayscrollbars-initialize=""
    >
      <div
        class="os-size-observer"
      >
        <div
          class="os-size-observer-listener"
        />
      </div>
      <div
        class=""
        data-overlayscrollbars-padding=""
        style="margin-right: 0px; margin-bottom: 0px; margin-left: 0px; top: 0px; left: 0px; width: calc(100% + 0px);"
      >
        <div
          class="viewport"
          data-overlayscrollbars-contents=""
          data-overlayscrollbars-viewport="overflowXHidden overflowYHidden"
          style="padding: 0px 0px 0px 0px;"
          tabindex="-1"
        >
          <div
            class="listContainer"
            style="min-height: 1px;"
          >
            <div
              role="tree"
              style="margin-top: 0px;"
            >
              <button
                class="uui-button-box uui-enabled -clickable root uui-vertical-tab-button uui-size-36 noLeftPadding onlyFoldable uui-no-left-icon uui-no-right-icon"
                role="tab"
                tabindex="0"
                type="button"
              >
                <div
                  class="foldingArea -clickable"
                  style="--uui-folding-indent: 0;"
                >
                  <div
                    aria-label="Unfold"
                    class="container uui-icon uui-enabled uui-folding-arrow iconContainer"
                    role="button"
                  >
                    <svg
                      class="rotate-90ccw"
                      height="18"
                      width="18"
                    />
                  </div>
                </div>
                <div
                  class="captionWrapper"
                >
                  <div
                    class="uui-caption uui-vertical-tab-button-weight-regular"
                  >
                    Root
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            aria-busy="false"
            aria-label=""
            aria-live="polite"
            class="container uui-blocker-container root"
            role="status"
          />
        </div>
      </div>
      <div
        class="os-scrollbar os-scrollbar-horizontal os-theme-none uui-scroll-bars os-scrollbar-auto-hide os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
        style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
      >
        <div
          class="os-scrollbar-track"
        >
          <div
            class="os-scrollbar-handle"
          />
        </div>
      </div>
      <div
        class="os-scrollbar os-scrollbar-vertical os-theme-none uui-scroll-bars os-scrollbar-auto-hide os-scrollbar-handle-interactive os-scrollbar-cornerless os-scrollbar-unusable"
        style="--os-scroll-percent: 0; --os-viewport-percent: 0; --os-scroll-direction: 0;"
      >
        <div
          class="os-scrollbar-track"
        >
          <div
            class="os-scrollbar-handle"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByAria": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByRoleAndText": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByAria": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByRoleAndText": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByAria": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByRoleAndText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByAria": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByRoleAndText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByAria": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByRoleAndText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByAria": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByRoleAndText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
